Bug 230558 - Forgetting removable media [invalid index, QList, DeviceModel::data, DeviceAutomounterKCM::forgetSelectedDevices]
Summary: Forgetting removable media [invalid index, QList, DeviceModel::data, DeviceAu...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_deviceautomounter (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Torrie Fischer
URL:
Keywords:
: 227885 231473 231569 233898 234730 234733 239905 242254 245082 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-03-13 12:15 UTC by carlo cancellieri
Modified: 2010-10-30 17:50 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description carlo cancellieri 2010-03-13 12:15:48 UTC
Application: systemsettings (1.0)
KDE Platform Version: 4.4.67 (KDE 4.4.67 (KDE 4.5 >= 20100310)) (Compiled from sources)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-gentoo-r6 x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:
forgetting removable media.
Selected removable media were: 
old mounted dvd (why hald should remember all mounted dvd???)
old mounted usb (pen drive (again, why???))
thank you




 -- Backtrace:
Application: System Settings (systemsettings), signal: Aborted
Traceback (most recent call last):
  File "/usr/share/gdb/auto-load/usr/lib64/libgobject-2.0.so.0.2200.4-gdb.py", line 9, in <module>
    from gobject import register
  File "/usr/share/glib-2.0/gdb/gobject.py", line 3, in <module>
    import gdb.backtrace
ImportError: No module named backtrace
The current source language is "auto; currently c".
[KCrash Handler]
#6  0x00007f88377b2065 in *__GI_raise (sig=<value optimized out>) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#7  0x00007f88377b3561 in *__GI_abort () at abort.c:88
#8  0x00007f883851dc45 in qt_message_output (msgType=QtFatalMsg, buf=0x1109508 "ASSERT failure in QList<T>::operator[]: \"index out of range\", file /usr/include/qt4/QtCore/qlist.h, line 443")
    at global/qglobal.cpp:2250
#9  0x00007f883851de24 in qt_message (msgType=QtFatalMsg, msg=0x7f88386de5d0 "ASSERT failure in %s: \"%s\", file %s, line %d", ap=0x7fff775a0600) at global/qglobal.cpp:2296
#10 0x00007f883851e691 in qFatal (msg=0x7f88386de5d0 "ASSERT failure in %s: \"%s\", file %s, line %d") at global/qglobal.cpp:2479
#11 0x00007f883851d817 in qt_assert_x (where=0x7f8823fe18d8 "QList<T>::operator[]", what=0x7f8823fe18c5 "index out of range", file=0x7f8823fe0f60 "/usr/include/qt4/QtCore/qlist.h", line=443)
    at global/qglobal.cpp:2021
#12 0x00007f8823fde05f in QList<QString>::operator[] (this=0xa61008, i=177) at /usr/include/qt4/QtCore/qlist.h:443
#13 0x00007f8823fdcb5b in DeviceModel::data (this=0xa60ff0, index=..., role=32)
    at /var/tmp/portage/kde-base/solid-runtime-9999/work/solid-runtime-9999/solid-device-automounter/kcm/DeviceModel.cpp:226
#14 0x00007f8823fda701 in QModelIndex::data (this=<value optimized out>, arole=<value optimized out>) at /usr/include/qt4/QtCore/qabstractitemmodel.h:398
#15 0x00007f8823fd9730 in DeviceAutomounterKCM::forgetSelectedDevices (this=0xca5230)
    at /var/tmp/portage/kde-base/solid-runtime-9999/work/solid-runtime-9999/solid-device-automounter/kcm/DeviceAutomounterKCM.cpp:87
#16 0x00007f8823fd893c in DeviceAutomounterKCM::qt_metacall (this=0xca5230, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>)
    at /var/tmp/portage/kde-base/solid-runtime-9999/work/solid-runtime-9999_build/solid-device-automounter/kcm/moc_DeviceAutomounterKCM.cpp:87
#17 0x00007f883865d1c5 in QMetaObject::metacall (object=0xca5230, cl=QMetaObject::InvokeMetaMethod, idx=41, argv=0x7fff775a0b70) at kernel/qmetaobject.cpp:237
#18 0x00007f883867365d in QMetaObject::activate (sender=0xcc0cd0, m=0x7f883a0a14e0, local_signal_index=2, argv=0x7fff775a0b70) at kernel/qobject.cpp:3293
#19 0x00007f8839b7d77c in QAbstractButton::clicked (this=0xcc0cd0, _t1=false) at .moc/debug-shared/moc_qabstractbutton.cpp:206
#20 0x00007f88397c63a6 in QAbstractButtonPrivate::emitClicked (this=0x7dfd30) at widgets/qabstractbutton.cpp:546
#21 0x00007f88397c6313 in QAbstractButtonPrivate::click (this=0x7dfd30) at widgets/qabstractbutton.cpp:539
#22 0x00007f88397c7b39 in QAbstractButton::mouseReleaseEvent (this=0xcc0cd0, e=0x7fff775a17e0) at widgets/qabstractbutton.cpp:1121
#23 0x00007f8839353f4b in QWidget::event (this=0xcc0cd0, event=0x7fff775a17e0) at kernel/qwidget.cpp:7998
#24 0x00007f88397c798e in QAbstractButton::event (this=0xcc0cd0, e=0x7fff775a17e0) at widgets/qabstractbutton.cpp:1080
#25 0x00007f883989a7cb in QPushButton::event (this=0xcc0cd0, e=0x7fff775a17e0) at widgets/qpushbutton.cpp:679
#26 0x00007f88392e07d0 in QApplicationPrivate::notify_helper (this=0x650450, receiver=0xcc0cd0, e=0x7fff775a17e0) at kernel/qapplication.cpp:4300
#27 0x00007f88392de653 in QApplication::notify (this=0x7fff775a27b0, receiver=0xcc0cd0, e=0x7fff775a17e0) at kernel/qapplication.cpp:3865
#28 0x00007f883a54f351 in KApplication::notify (this=0x7fff775a27b0, receiver=0xcc0cd0, event=0x7fff775a17e0)
    at /var/tmp/portage/kde-base/kdelibs-9999/work/kdelibs-9999/kdeui/kernel/kapplication.cpp:302
#29 0x00007f883865517c in QCoreApplication::notifyInternal (this=0x7fff775a27b0, receiver=0xcc0cd0, event=0x7fff775a17e0) at kernel/qcoreapplication.cpp:704
#30 0x00007f88392e365f in QCoreApplication::sendSpontaneousEvent (receiver=0xcc0cd0, event=0x7fff775a17e0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#31 0x00007f88392dcadc in QApplicationPrivate::sendMouseEvent (receiver=0xcc0cd0, event=0x7fff775a17e0, alienWidget=0xcc0cd0, nativeWidget=0xd11dc0, buttonDown=0x7f883a0b3f58, lastMouseReceiver=..., 
    spontaneous=true) at kernel/qapplication.cpp:2963
#32 0x00007f883938f617 in QETWidget::translateMouseEvent (this=0xd11dc0, event=0x7fff775a2330) at kernel/qapplication_x11.cpp:4368
#33 0x00007f883938beca in QApplication::x11ProcessEvent (this=0x7fff775a27b0, event=0x7fff775a2330) at kernel/qapplication_x11.cpp:3379
#34 0x00007f88393c6fab in x11EventSourceDispatch (s=0x647950, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#35 0x00007f8834732780 in g_main_dispatch (context=0x647250) at gmain.c:1960
#36 IA__g_main_context_dispatch (context=0x647250) at gmain.c:2513
#37 0x00007f88347360c8 in g_main_context_iterate (context=0x647250, block=1, dispatch=1, self=<value optimized out>) at gmain.c:2591
#38 0x00007f883473628c in IA__g_main_context_iteration (context=0x647250, may_block=1) at gmain.c:2654
#39 0x00007f883869206b in QEventDispatcherGlib::processEvents (this=0x650000, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#40 0x00007f88393c76b4 in QGuiEventDispatcherGlib::processEvents (this=0x650000, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#41 0x00007f8838652174 in QEventLoop::processEvents (this=0x7fff775a2710, flags=...) at kernel/qeventloop.cpp:149
#42 0x00007f88386522ca in QEventLoop::exec (this=0x7fff775a2710, flags=...) at kernel/qeventloop.cpp:201
#43 0x00007f883865587e in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#44 0x00007f88392dd7e0 in QApplication::exec () at kernel/qapplication.cpp:3579
#45 0x000000000041419f in main (argc=<value optimized out>, argv=<value optimized out>) at /var/tmp/portage/kde-base/systemsettings-9999/work/systemsettings-9999/systemsettings/app/main.cpp:49

Reported using DrKonqi
Comment 1 Dario Andres 2010-03-20 23:23:23 UTC
*** Bug 231473 has been marked as a duplicate of this bug. ***
Comment 2 Dario Andres 2010-03-21 21:15:34 UTC
This may be related to bug 229022 / bug 226135.
Comment 3 Dario Andres 2010-03-21 21:16:38 UTC
From bug 231569:
-- Information about the crash:
I had gone to the automount settings. Selected all removable devices from list
and clicked "Forget device", SystemSettings crashed. When removing devices one
per time, it doesn't crash immidiately, but crashs when you try to close window
and then click "Discars". When you remove devices one per time and then click
"Apply", it doesn't crash.
Comment 4 Dario Andres 2010-03-21 21:16:46 UTC
*** Bug 231569 has been marked as a duplicate of this bug. ***
Comment 5 Torrie Fischer 2010-03-26 18:38:02 UTC
*** Bug 227885 has been marked as a duplicate of this bug. ***
Comment 6 Torrie Fischer 2010-03-26 19:05:06 UTC
SVN commit 1107757 by tdfischer:

crash--

BUG: 230558

 M  +4 -4      DeviceAutomounterKCM.cpp  
 M  +7 -6      DeviceModel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1107757
Comment 7 Dario Andres 2010-04-11 00:35:52 UTC
*** Bug 233898 has been marked as a duplicate of this bug. ***
Comment 8 Rex Dieter 2010-04-13 14:27:55 UTC
Was this ever backported to branches/4.4 ?

If not, any objections if I do so?
Comment 9 Jonathan Thomas 2010-04-18 20:29:43 UTC
*** Bug 234733 has been marked as a duplicate of this bug. ***
Comment 10 Jonathan Thomas 2010-04-18 21:55:15 UTC
*** Bug 234730 has been marked as a duplicate of this bug. ***
Comment 11 Nicolas L. 2010-07-20 09:40:52 UTC
*** Bug 245082 has been marked as a duplicate of this bug. ***
Comment 12 Christoph Feck 2010-10-30 17:48:20 UTC
*** Bug 239905 has been marked as a duplicate of this bug. ***
Comment 13 Christoph Feck 2010-10-30 17:50:38 UTC
*** Bug 242254 has been marked as a duplicate of this bug. ***