crash--

BUG: 230558

svn path=/trunk/KDE/kdebase/runtime/; revision=1107757